# file-join

./: pyproject.toml
src/file_join/: __init__.py  __main__.py
src/file_join/args/: __init__.py  msg.py  parser.py  spec.py
src/file_join/common/: __init__.py  _io.py  exit_code.py  style.py
src/file_join/joiner/: __init__.py  main.py
